# hail

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.js  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release-cli.yml  release-sdk.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/hailhq/api/: auth.py  db.py  deps.py  idempotency.py  main.py
api/hailhq/api/routes/: calls.py  events.py
api/migrations/: env.py
api/migrations/versions/: 0001_initial.py
api/tests/: conftest.py  test_auth.py  test_calls_api.py  test_events_api.py  test_idempotency.py
cli/: .goreleaser.yml  Makefile  go.mod  go.sum  main.go  tools.go
cli/internal/client/: client.gen.go
cli/internal/cmd/: call.go  call_list.go  call_list_test.go  call_status.go  call_status_test.go  call_test.go  root.go  tail.go  tail_test.go
cli/internal/codegen/: preprocess.go
core/: conftest.py  pyproject.toml
core/hailhq/core/: config.py  db.py  livekit.py  models.py  schemas.py
core/hailhq/core/providers/voice/: __init__.py  base.py  twilio.py
core/hailhq/core/testing/: fixtures.py
core/tests/: test_livekit.py  test_models.py  test_schemas.py
core/tests/providers/: test_twilio_voice.py
docs/: architecture.md  contributing.md
docs/ops/: claim-checklist.md
docs/setup/: livekit-cloud.md  mcp.md  twilio.md
docs/superpowers/plans/: 2026-04-24-v1-outbound-calls.md
mcp/: Dockerfile  pyproject.toml
mcp/hail/mcp/: server.py
mcp/hailhq/mcp/: hail_client.py  server.py  tools.py
mcp/tests/: test_tools.py
openapi/: openapi.yaml
sdk/: README.md  pyproject.toml
sdk/hail/: __init__.py  _errors.py  _http.py  _resource_id.py  client.py  models.py
sdk/tests/: conftest.py  test_client.py  test_models.py  test_resource_id.py
voicebot/: Dockerfile  pyproject.toml
voicebot/hailhq/voicebot/: agent.py  main.py  pipeline.py  recording.py
voicebot/tests/: _fakes.py  conftest.py  test_agent.py  test_pipeline.py
