[project]
name = "hailhq-api"
version = "0.1.0"
description = "Hail API service — deployed, not published."
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "hailhq-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "twilio>=9.3",
    "livekit-api>=0.8",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hailhq/api"]

[tool.uv.sources]
hailhq-core = { workspace = true }
