[project]
name = "hailhq-core"
version = "0.1.0"
description = "Hail shared library — models, config, and provider adapters."
readme = "../README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hailhq/core"]
