[project]
name = "hailhq-core"
version = "0.1.0"
description = "Hail shared library — models, config, and provider adapters."
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "livekit-api>=1.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "twilio>=9.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.23",
    "responses>=0.26",
    "ruff",
    "mypy",
    "testcontainers[postgres]>=4",
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship the hailhq namespace dir; subpackage layout is preserved as
# hailhq/core/... in the wheel. (`packages = ["hailhq/core"]` strips
# the namespace prefix and breaks PEP 420 resolution at install time.)
packages = ["hailhq"]
dev-mode-dirs = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
