[project]
name = "hail-mcp"
version = "0.1.0"
description = "Hail MCP server — exposes Hail as tools for AI agents."
readme = "../README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hail-core",
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
hail-mcp = "hail.mcp.server:main"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hail/mcp"]

[tool.uv.sources]
hail-core = { workspace = true }
