[project]
name = "hailhq-mcp"
version = "0.1.0"
description = "Hail MCP service — remote MCP server (SSE), deployed, not published."
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "hailhq-core",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hailhq/mcp"]

[tool.uv.sources]
hailhq-core = { workspace = true }
