[project]
name = "hailhq-mcp"
version = "0.1.0"
description = "Hail MCP service — remote MCP server (SSE), deployed, not published."
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "hailhq-core",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship the hailhq namespace dir; the subpackage stays at hailhq/mcp/...
packages = ["hailhq"]
dev-mode-dirs = ["."]

[tool.uv.sources]
hailhq-core = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
