[project]
name = "hail-sdk"
version = "0.1.0"
description = "Python SDK for Hail — universal communication platform for AI agents."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "Hail", email = "hi@hail.so" }]
keywords = ["hail", "voice", "phone", "sms", "email", "ai-agents", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://hail.so"
Repository = "https://github.com/hail-hq/hail"
Documentation = "https://hail.so/docs"
Issues = "https://github.com/hail-hq/hail/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hail"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
