[project]
name = "hailhq-voicebot"
version = "0.1.0"
description = "Hail voicebot service — deployed, not published."
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "hailhq-core",
    "livekit>=0.20",
    "livekit-agents>=0.11",
    "livekit-plugins-openai",
    "livekit-plugins-google",
    "livekit-plugins-anthropic",
    "livekit-plugins-deepgram",
    "livekit-plugins-elevenlabs",
    "livekit-plugins-silero",
    "livekit-plugins-turn-detector",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hailhq/voicebot"]

[tool.uv.sources]
hailhq-core = { workspace = true }
