[project]
name = "hailhq-voicebot"
version = "0.1.0"
description = "Hail voicebot service — deployed, not published."
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "hailhq-core",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "livekit>=1.1,<2",
    "livekit-agents>=1.5,<2",
    "livekit-plugins-openai>=1.5,<2",
    "livekit-plugins-google>=1.5,<2",
    "livekit-plugins-anthropic>=1.5,<2",
    "livekit-plugins-deepgram>=1.5,<2",
    "livekit-plugins-elevenlabs>=1.5,<2",
    "livekit-plugins-silero>=1.5,<2",
    "livekit-plugins-turn-detector>=1.5,<2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.23",
    "ruff",
    "mypy",
    "testcontainers[postgres]>=4",
    "psycopg[binary]>=3.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Ship the hailhq namespace dir; the subpackage stays at hailhq/voicebot/...
packages = ["hailhq"]
dev-mode-dirs = ["."]

[tool.uv.sources]
hailhq-core = { workspace = true }
